# ballista-aws-tools

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md
docker/: Dockerfile  docker-compose.yml
docker/tpch/: Dockerfile  entrypoint.sh
infra/: .terraform.lock.hcl  addpolicy.tf  common.tf  copy-data.py  efs.tf  main.tf  modules.tf  output.tf
infra/env/: conf.tf
infra/fargate/: ecr.tf  ecs.tf  iam.tf  inputs.tf  locals.tf
infra/lambda/: iam.tf  inputs.tf  lambda.tf
notebooks/: tpch_bench.ipynb
rust/: Cargo.toml  build.rs  executor_config_spec.toml  standalone_config_spec.toml  trigger_config_spec.toml
rust/src/: fargate.rs  lib.rs  tpch.rs
