[package]
name = "ballista-aws-tools"
version = "0.1.0"
authors = ["rdettai <contact@cloudfuse.io>"]
edition = "2018"

[dependencies]
ballista-core = { git = "https://github.com/apache/arrow-datafusion", rev = "03cfcb26ad6a566dc6fabe6f93e4f3b3d416432d" }
ballista-executor = { git = "https://github.com/apache/arrow-datafusion", rev = "03cfcb26ad6a566dc6fabe6f93e4f3b3d416432d" }
ballista-scheduler = { git = "https://github.com/apache/arrow-datafusion", rev = "03cfcb26ad6a566dc6fabe6f93e4f3b3d416432d" }
arrow-flight = { version = "4.4"  }
anyhow = "1"
async-trait = "0.1.36"
configure_me = "0.4.0"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
snmalloc-rs = {version = "0.2", features= ["cache-friendly"], optional = true}
tempfile = "3"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.4"
uuid = { version = "0.8", features = ["v4"] }
hyper = "0.14.4"
tower = { version = "0.4" }
warp = "0.3"

[build-dependencies]
configure_me_codegen = "0.4.0"

[package.metadata.configure_me.bin]
standalone = "standalone_config_spec.toml"
executor = "executor_config_spec.toml"

